# app-factory-python

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/routers/: openai.py
app/services/: openai_service.py
app_factory_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: config.py  logging.ini  logging_config.py
docs/: init_project.md
test/: test_openai_api.py
