[tool.poetry]
authors = ["ray1997"]
description = "FastAPI project with OpenAI Agent integration"
name = "app-factory-python"
packages = [
  {include = "app"},
  {include = "config"},
]
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "0.115.12"
openai = "1.76.0"
openai-agents = "0.0.13"
python = ">=3.11,<4.0"
python-dotenv = "1.1.0"
uvicorn = {version = "0.34.2", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level = "INFO"
